Added font, colors and sizes

--- a/less/main.less
+++ b/less/main.less
@@ -1,6 +1,35 @@
 @import "variables";
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
 
-#header {
-  width: @width;
-  height: @height;
+header {
+  background-color: @color-primary;
+}
+
+span {
+  color: @span-color;
+}
+
+button {
+  background-color: @button;
+  font-family: @font;
+  padding: @button-padding;
+  border: @border;
+  border-radius: @border-radius;
+  font-size: @button-font;
+}
+
+section {
+  background-color: @section;
+}
+
+hr {
+  color: @hr;
+}
+
+footer {
+  background-color: @footer;
+}
+
+body {
+  font-family: @font;
 }
