--- a/less/variables.less
+++ b/less/variables.less
@@ -1,2 +1,17 @@
-@width: 10px;
-@height: @width + 10px;
+@color-primary: #F8dF1F;
+
+@button: #F8dF1F;
+@button-padding: 10px;
+@border: none;
+@border-radius: 8px;
+@button-font: 18px;
+
+@section: #F3F3F3;
+
+@footer: #080801;
+
+@hr: #F8DF1F;
+
+@span-color: #EE252F;
+
+@font: 'Roboto', sans-serif;
