--- a/less/variables.less
+++ b/less/variables.less
@@ -1,6 +1,5 @@
 @color-primary: #F8dF1F;
 
-@button: #F8dF1F;
 @button-padding: 10px;
 @border: none;
 @border-radius: 8px;
@@ -10,8 +9,14 @@
 
 @footer: #080801;
 
-@hr: #F8DF1F;
-
 @span-color: #EE252F;
 
 @font: 'Roboto', sans-serif;
+
+@background-image: url("../img/banner-bg.jpg");
+
+@para: 16px;
+
+@con: 50px 200px;
+
+@bg: #F3f3f3;
