--- a/less/variables.less
+++ b/less/variables.less
@@ -1,6 +1,6 @@
 @color-primary: #F8dF1F;
 
-@button-padding: 10px;
+@button-padding: 10px 20px;
 @border: none;
 @border-radius: 8px;
 @button-font: 18px;
