--- a/less/main.less
+++ b/less/main.less
@@ -57,11 +57,6 @@ ul {
   }
 }
 
-.maintxt {
-  background-image: @background-image;
-  background-size: 1400px 500px;
-}
-
 p {
   font-size: @para;
 }
@@ -77,4 +72,16 @@ p {
 .logo {
   max-width: 400px;
   width: 100%;
+}
+
+.container1 {
+  background-image: url("../img/banner-bg.jpg");
+  width: 100%;
+  max-width: 1400px;
+  text-align: center;
+  padding: 100px 0;
+}
+
+.top-logo {
+  padding-bottom: 20px;
 }
