--- a/css/main.css
+++ b/css/main.css
@@ -54,7 +54,7 @@ p {
   font-size: 16px;
 }
 .container-fluid {
-  padding: 50px 200px;
+  padding: 50px 150px;
 }
 .bg {
   background-color: #f3f3f3;
@@ -72,4 +72,15 @@ p {
 }
 .top-logo {
   padding-bottom: 20px;
+}
+.bob {
+  padding-bottom: 20px;
+}
+@media (max-width: 700px) {
+  p {
+    font-size: 12px;
+  }
+  .container-fluid {
+    padding: 30px 10px;
+  }
 }
