--- a/less/main.less
+++ b/less/main.less
@@ -85,3 +85,18 @@ p {
 .top-logo {
   padding-bottom: 20px;
 }
+
+.bob {
+  padding-bottom: 20px;
+}
+
+@media (max-width: 700px) {
+  p {
+    font-size: 12px;
+  }
+
+  .container-fluid {
+    padding: 30px 10px;
+  }
+
+}
