--- a/less/main.less
+++ b/less/main.less
@@ -79,13 +79,15 @@ footer {
 
 //Media Queries
 
+@media (max-width: 768px) {
+  .container-fluid {
+    padding: 60px;
+  }
+}
+
 @media (max-width: 700px) {
   p {
     font-size: 12px;
-  }
-
-  .container-fluid {
-    padding: 30px 10px;
   }
 
   ul {
@@ -99,9 +101,11 @@ footer {
   }
 
   img {
-    max-width: 100%;
+    max-width: 75%;
   }
+}
 
+@media (max-width: 575px) {
   .img {
     display: none;
   }
